--- a/Index.html
+++ b/Index.html
@@ -10,54 +10,88 @@
 </head>
 
 <body>
-   <div id="navBar"></div>
-    <section id="header">
-        <h1> WELCOME TO MY PORTFOLIO WEBSITE</h1>
-        <img src="#">
-    </section>
-    <section id="section-aboutME">
-        <H2>A LITTLE ABOUT ME</H2>
-        <div id="AE-Container">
-            <div id="AE-IMG"></div>
-            <div id="AE-TXT"></div>
-        </div>
-    </section>
-    <section id="section-aboutSITE">
-        <h2>A LITTLE ABOUT THIS SITE </h2>
-        <div id="AM-Container">
-            <div id="AM-IMG"></div>
-            <div id="AM-TXT"></div>
-        </div>
-    </section>
-    <section id="section-Themes">
-        <h2>THEMES </h2>
-        <div id="THEME1-Container">
-            <h1> </h1>
-            <div id="theme1-IMG"></div>
-            <div id="theme1-TXT">
+    <div id="wrapper">
+        <div id="navBar">
+            <div id="logoContainer">
+                <div id="logo"></div>
+            </div>
+            <div id="linkContainer">
+                <ul>
+                    <li><a style="text-decoration: none" href="#">Me</a></li>
+                    <li><a style="text-decoration: none" href="#">This site</a></li>
+                    <li><a style="text-decoration: none" href="#">Themes</a></li>
+                </ul>
             </div>
         </div>
-        <div id="THEME2-Container">
-            <h1></h1>
-            <div id="theme2-IMG"></div>
-            <div id="theme2-TXT">
+        <section id="header">
+            <h1> WELCOME TO MY PORTFOLIO WEBSITE</h1>
+            <img src="#">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nemo nobis quae, incidunt placeat perspiciatis cumque beatae corporis. Dolore distinctio magni, ut iusto facere dignissimos, odit minima laborum, quia autem suscipit. Excepturi commodi, molestias sunt ut laborum fugit ducimus tenetur doloribus velit placeat nisi provident blanditiis porro. Alias a excepturi praesentium incidunt adipisci illum fugit consequuntur dignissimos minus vitae ullam ipsum facere esse odio ipsam laboriosam labore officiis ut, molestias deserunt quia doloribus enim aut. Ipsam deleniti voluptas, beatae, blanditiis quas perspiciatis quod, explicabo enim ipsum temporibus est, consequuntur. Reiciendis omnis dolores similique cum, eos doloribus totam laudantium aliquam repellat?</p>
+        </section>
+        <section id="section-aboutME">
+            <H2>A LITTLE ABOUT ME</H2>
+            <div id="AM-Container">
+                <div id="AM-IMG"></div>
+                <div id="AM-TXT">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="THEME3-Container">
-            <h1></h1>
-            <div id="theme3-IMG"></div>
-            <div id="theme3-TXT">
+        </section>
+        <section id="section-aboutSITE">
+            <h2>A LITTLE ABOUT THIS SITE </h2>
+            <div id="AS-Container">
+                <div id="AS-IMG"></div>
+                <div id="AS-TXT">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                    </p>
+                </div>
             </div>
-        </div>
-        <div id="THEME4-Container">
-            <h1></h1>
-            <div id="theme4-IMG"></div>
-            <div id="theme4-TXT">
+        </section>
+        <section id="section-Themes">
+            <h2>THEMES </h2>
+            <div id="THEME1-Container">
+                <h1> </h1>
+                <div id="theme1-IMG"></div>
+                <div id="theme1-TXT">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                    </p>
+                </div>
             </div>
+            <div id="THEME2-Container">
+                <h1></h1>
+                <div id="theme2-IMG"></div>
+                <div id="theme2-TXT">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                    </p>
+                </div>
+            </div>
+            <div id="THEME3-Container">
+                <h1></h1>
+                <div id="theme3-IMG"></div>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                </p>
+                <div id="theme3-TXT">
+                </div>
+            </div>
+            <div id="THEME4-Container">
+                <h1></h1>
+                <div id="theme4-IMG"></div>
+                <div id="theme4-TXT">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi ea nemo, quia atque optio nulla quidem ipsum, in temporibus!
+                    </p>
+                </div>
+            </div>
+        </section>
+        <div id="footer">
+            <h2>FOOTER</h2>
         </div>
-    </section>
-    <div id="footer">
-        <h2>FOOTER</h2>
     </div>
 </body>
 
