--- a/Index.html
+++ b/Index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styling.css">
     <script src="styling.css" defer></script>
     <title>HomePage</title>
@@ -13,11 +14,15 @@
     <div id="wrapper">
         <div id="navBar">
             <div id="logoContainer">
-                <div id="logo"></div>
+                <div id="logo"><a href="Index.html">
+                        <img src="Assets/images/1x/Logo1.png" alt="">
+
+                    </a>
+                </div>
             </div>
             <div id="linkContainer">
                 <ul>
-                    <li><a style="text-decoration: none" href="#">Me</a></li>
+                    <li><a style="text-decoration: none" href="#"> Me </a></li>
                     <li><a style="text-decoration: none" href="#">This site</a></li>
                     <li><a style="text-decoration: none" href="#">Themes</a></li>
                 </ul>
@@ -25,17 +30,18 @@
         </div>
         <section id="header">
             <h1> WELCOME TO MY PORTFOLIO WEBSITE</h1>
-            <img src="#">
+            <img alt="" src="Assets/images/LARGE/SVG/homepage-welcome-bg.svg">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nemo nobis quae, incidunt placeat perspiciatis cumque beatae corporis. Dolore distinctio magni, ut iusto facere dignissimos, odit minima laborum, quia autem suscipit. Excepturi commodi, molestias sunt ut laborum fugit ducimus tenetur doloribus velit placeat nisi provident blanditiis porro. Alias a excepturi praesentium incidunt adipisci illum fugit consequuntur dignissimos minus vitae ullam ipsum facere esse odio ipsam laboriosam labore officiis ut, molestias deserunt quia doloribus enim aut. Ipsam deleniti voluptas, beatae, blanditiis quas perspiciatis quod, explicabo enim ipsum temporibus est, consequuntur. Reiciendis omnis dolores similique cum, eos doloribus totam laudantium aliquam repellat?</p>
         </section>
         <section id="section-aboutME">
-            <H2>A LITTLE ABOUT ME</H2>
+            <h2>A LITTLE ABOUT ME</h2>
             <div id="AM-Container">
                 <div id="AM-IMG"></div>
                 <div id="AM-TXT">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
                     </p>
+                    <button id="btnAM"> FIND OUT MORE</button>
                 </div>
             </div>
         </section>
@@ -52,8 +58,9 @@
         </section>
         <section id="section-Themes">
             <h2>THEMES </h2>
-            <div id="THEME1-Container">
-                <h1> </h1>
+            <div id="THEME1-Container"><a href="theme1.html">
+                    <h2>Basic Web</h2>
+                </a>
                 <div id="theme1-IMG"></div>
                 <div id="theme1-TXT">
                     <p>
@@ -61,8 +68,9 @@
                     </p>
                 </div>
             </div>
-            <div id="THEME2-Container">
-                <h1></h1>
+            <div id="THEME2-Container"><a href="theme2.html">
+                    <h2>Basic Animation</h2>
+                </a>
                 <div id="theme2-IMG"></div>
                 <div id="theme2-TXT">
                     <p>
@@ -70,8 +78,9 @@
                     </p>
                 </div>
             </div>
-            <div id="THEME3-Container">
-                <h1></h1>
+            <div id="THEME3-Container"><a href="theme3.html">
+                    <h2>Basic Content</h2>
+                </a>
                 <div id="theme3-IMG"></div>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
@@ -79,8 +88,9 @@
                 <div id="theme3-TXT">
                 </div>
             </div>
-            <div id="THEME4-Container">
-                <h1></h1>
+            <div id="THEME4-Container"><a href="theme4.html">
+                    <h2>Basic UX</h2>
+                </a>
                 <div id="theme4-IMG"></div>
                 <div id="theme4-TXT">
                     <p>
