--- a/aboutMe.html
+++ b/aboutMe.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styling.css">
     <script src="styling.css" defer></script>
-    <title>About Site</title>
+    <title>About Me</title>
 </head>
 
 <body>
