--- a/theme2.html
+++ b/theme2.html
@@ -3,12 +3,28 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styling.css">
-    <script src="script.js" defer></script>
+    <script src="styling.css" defer></script>
     <title>Basic Animation</title>
 </head>
 
 <body>
+        <div id="navBar">
+            <div id="logoContainer">
+                <div id="logo"><a href="Index.html">
+                        <img src="Assets/images/1x/Logo1.png" alt="">
 
+                    </a>
+                </div>
+            </div>
+            <div id="linkContainer">
+                <ul>
+                    <li><a style="text-decoration: none" href="#"> Me </a></li>
+                    <li><a style="text-decoration: none" href="#">This site</a></li>
+                    <li><a style="text-decoration: none" href="#">Themes</a></li>
+                </ul>
+            </div>
+        </div>
 </body>
 </html>
