--- a/aboutSite.html
+++ b/aboutSite.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <div id="navBar">
+        <div id="logoContainer">
+            <div id="logo"><a href="Index.html">
+                    <img src="Assets/images/1x/Logo1.png" alt="">
+
+                </a>
+            </div>
+        </div>
+        <div id="linkContainer">
+            <ul>
+                <li><a style="text-decoration: none" href="#"> Me </a></li>
+                <li><a style="text-decoration: none" href="#">This site</a></li>
+                <li><a style="text-decoration: none" href="#">Themes</a></li>
+            </ul>
+        </div>
+    </div>
 
 </body>
 </html>
