--- a/Index.html
+++ b/Index.html
@@ -11,12 +11,11 @@
 </head>
 
 <body>
-    <div id="wrapper">
+    <div id="bodyWrapper">
         <div id="navBar">
             <div id="logoContainer">
                 <div id="logo"><a href="Index.html">
                         <img src="Assets/images/1x/Logo1.png" alt="">
-
                     </a>
                 </div>
             </div>
@@ -29,9 +28,10 @@
             </div>
         </div>
         <section id="header">
-            <h1> WELCOME TO MY PORTFOLIO WEBSITE</h1>
             <img alt="" src="Assets/images/LARGE/SVG/homepage-welcome-bg.svg">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum nemo nobis quae, incidunt placeat perspiciatis cumque beatae corporis. Dolore distinctio magni, ut iusto facere dignissimos, odit minima laborum, quia autem suscipit. Excepturi commodi, molestias sunt ut laborum fugit ducimus tenetur doloribus velit placeat nisi provident blanditiis porro. Alias a excepturi praesentium incidunt adipisci illum fugit consequuntur dignissimos minus vitae ullam ipsum facere esse odio ipsam laboriosam labore officiis ut, molestias deserunt quia doloribus enim aut. Ipsam deleniti voluptas, beatae, blanditiis quas perspiciatis quod, explicabo enim ipsum temporibus est, consequuntur. Reiciendis omnis dolores similique cum, eos doloribus totam laudantium aliquam repellat?</p>
+            <div id="headerTextwrapper">
+                <h1> WELCOME TO MY STUDENT PORTFOLIO SITE</h1>
+            </div>
         </section>
         <section id="section-aboutME">
             <h2>A LITTLE ABOUT ME</h2>
@@ -39,11 +39,13 @@
                 <div id="AM-IMG"></div>
                 <div id="AM-TXT">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                        My name is Hudeifer Esa, I am 23 year old student of MMD at KEA!
                     </p>
-                    <button id="btnAM"> FIND OUT MORE</button>
                 </div>
             </div>
+            <a href="aboutMe.html">
+                <div id="btnAM"> FIND OUT MORE</div>
+            </a>
         </section>
         <section id="section-aboutSITE">
             <h2>A LITTLE ABOUT THIS SITE </h2>
@@ -55,46 +57,51 @@
                     </p>
                 </div>
             </div>
+            <a href="aboutSite.html">
+                <div id="btnAS"> FIND OUT MORE</div>
+            </a>
         </section>
         <section id="section-Themes">
-            <h2>THEMES </h2>
-            <div id="THEME1-Container"><a href="theme1.html">
-                    <h2>Basic Web</h2>
+            <h2 id="themesTitle">THEMES </h2>
+            <div id="THEME1-Container" class="themeContainers"><a href="theme1.html">
+                    <h2 class="themeHeader">Basic Web</h2>
                 </a>
-                <div id="theme1-IMG"></div>
-                <div id="theme1-TXT">
+                <div id="theme1-IMG" class="themesImg"></div>
+                <div id="theme1-TXT" class="themesTxt">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
                     </p>
                 </div>
             </div>
-            <div id="THEME2-Container"><a href="theme2.html">
-                    <h2>Basic Animation</h2>
+            <div id="THEME2-Container" class="themeContainers"><a href="theme2.html">
+                    <h2 class="themeHeader">Basic Animation</h2>
                 </a>
-                <div id="theme2-IMG"></div>
-                <div id="theme2-TXT">
+                <div id="theme2-IMG" class="themesImg"></div>
+                <div id="theme2-TXT" class="themesTxt">
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
                     </p>
                 </div>
             </div>
-            <div id="THEME3-Container"><a href="theme3.html">
-                    <h2>Basic Content</h2>
+            <div id="THEME3-Container" class="themeContainers"><a href="theme3.html">
+                    <h2 class="themeHeader">Basic Content</h2>
                 </a>
-                <div id="theme3-IMG"></div>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
-                </p>
-                <div id="theme3-TXT">
+                <div id="theme3-IMG" class="themesImg"></div>
+
+                <div id="theme3-TXT" class="themesTxt">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                    </p>
                 </div>
             </div>
-            <div id="THEME4-Container"><a href="theme4.html">
-                    <h2>Basic UX</h2>
+            <div id="THEME4-Container" class="themeContainers"><a href="theme4.html">
+                    <h2 id="uxHeader" class="themeHeader">Basic UX</h2>
                 </a>
-                <div id="theme4-IMG"></div>
-                <div id="theme4-TXT">
+                <div id="theme4-IMG" class="themesImg"></div>
+                <div id="theme4-TXT" class="themesTxt">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora sequi ea nemo, quia atque optio nulla quidem ipsum, in temporibus!
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis magni deserunt fuga mollitia illum necessitatibus blanditiis molestiae rerum omnis earum, nobis magnam? Optio laboriosam repudiandae sint voluptate asperiores quod temporibus laudantium, incidunt aliquam modi nisi, ab dolore, eos id odio tempora aspernatur iste. Fugiat quibusdam deleniti dolore dolorum, expedita? Dicta, quas labore rem laborum temporibus odio excepturi nisi necessitatibus repellat eligendi, ab vitae aliquid explicabo iure voluptatum ut autem non, officiis, blanditiis possimus. Quisquam impedit tenetur quam omnis aut minus, corporis molestiae quaerat cupiditate, explicabo quis! Cumque ratione, voluptatem aliquid sunt molestias iusto rerum dolores tenetur tempora fugit eos quasi.
+
                     </p>
                 </div>
             </div>
