homepage template complete.

--- a/Index.html
+++ b/Index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
         <section id="header">
-            <img alt="" src="Assets/images/LARGE/SVG/homepage-welcome-bg.svg">
+            <img alt="" src="Assets/images/LARGE/1x/background1.png">
             <div id="headerTextwrapper">
                 <h1> WELCOME TO MY STUDENT PORTFOLIO SITE</h1>
             </div>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <a href="aboutMe.html">
-                <div id="btnAM"> FIND OUT MORE</div>
+                <div id="btnAM"> Find out more</div>
             </a>
         </section>
         <section id="section-aboutSITE">
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <a href="aboutSite.html">
-                <div id="btnAS"> FIND OUT MORE</div>
+                <div id="btnAS"> Find out more</div>
             </a>
         </section>
         <section id="section-Themes">
