--- a/theme1.html
+++ b/theme1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +27,20 @@
             </ul>
         </div>
     </div>
-
-
+    <!--article section-->
+    <div class="pageWrapper">
+        <img class="pageImg" src="#" alt="">
+        <div class="articleWrapper">
+            <div class="articleTxt">
+            <h1 class="articleTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, asperiores!</h1>
+            <img src="#" alt="#">
+            <section class="articleSection">
+            <h2 class="section">Lorem ipsum dolor sit.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
+            </section>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
