--- a/theme2.html
+++ b/theme2.html
@@ -20,8 +20,8 @@
         </div>
         <div id="linkContainer">
             <ul>
-                <li><a style="text-decoration: none" href="#"> Me </a></li>
-                <li><a style="text-decoration: none" href="#">This site</a></li>
+                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
                 <li><a style="text-decoration: none" href="#">Themes</a></li>
             </ul>
         </div>
