COMPLETE WEBSITE TEMPLATE FINSIHED

--- a/theme1.html
+++ b/theme1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styling.css">
-    <script src="styling.css" defer></script>
+    <script src="script.js" defer></script>
     <title>Basic Web</title>
 </head>
 
@@ -21,25 +21,24 @@
         </div>
         <div id="linkContainer">
             <ul>
-                <li><a style="text-decoration: none" href="#"> Me </a></li>
-                <li><a style="text-decoration: none" href="#">This site</a></li>
-                <li><a style="text-decoration: none" href="#">Themes</a></li>
+                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
+                <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
             </ul>
         </div>
     </div>
     <!--article section-->
     <div class="pageWrapper">
-        <img class="pageImg" src="#" alt="">
-        <div class="articleWrapper">
-            <div class="articleTxt">
-            <h1 class="articleTitle">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, asperiores!</h1>
-            <img src="#" alt="#">
-            <section class="articleSection">
+        <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
+        <h1 class="articleTitle">THEME: BASIC WEB</h1>
+        <section class="articleSection">
             <h2 class="section">Lorem ipsum dolor sit.</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
-            </section>
-            </div>
-        </div>
+            <img src="Assets/images/1x/Logo1.png" alt="#">
+        </section>
+    </div>
+    <div class="footer">
+        <h2>FOOTER</h2>
     </div>
 </body>
 
