--- a/theme2.html
+++ b/theme2.html
@@ -22,9 +22,23 @@
             <ul>
                 <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
                 <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
-                <li><a style="text-decoration: none" href="#">Themes</a></li>
+                <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
             </ul>
         </div>
+    </div>
+    <div class="pageWrapper">
+        <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
+        <h1 class="articleTitle">THEME: BASIC ANIMATION</h1>
+        <section class="articleSection">
+            <h2 class="section">Lorem ipsum dolor sit.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
+            <div class="asImgDiv">
+                <img src="Assets/images/1x/Logo1.png" alt="">
+            </div>
+        </section>
+    </div>
+    <div class="footer">
+        <h2>FOOTER</h2>
     </div>
 </body>
 </html>
