--- a/themeHub.html
+++ b/themeHub.html
@@ -1,67 +1,37 @@
 <!DOCTYPE html>
-<html lang="zxx">
-
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styling.css">
-    <script src="styling.css" defer></script>
-    <title>HomePage</title>
+    <script src="script.js" defer></script>
+    <title>themeHub</title>
 </head>
 
 <body>
-    <div id="bodyWrapper">
-        <div id="navBar">
-            <div id="logoContainer">
-                <div id="logo"><a href="Index.html">
-                        <img src="Assets/images/1x/Logo1.png" alt="">
-                    </a>
-                </div>
-            </div>
-            <div id="linkContainer">
-                <ul>
-                    <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
-                    <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
-                    <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
-                </ul>
+    <div id="navBar">
+        <div id="logoContainer">
+            <div id="logo"><a href="Index.html">
+                    <img src="Assets/images/1x/Logo1.png" alt="">
+
+                </a>
             </div>
         </div>
-        <section id="header">
+        <div id="linkContainer">
+            <ul>
+                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
+                <li><a style="text-decoration: none" href="#">Themes</a></li>
+            </ul>
+        </div>
+    </div>
+            <section id="header">
             <img alt="" src="Assets/images/LARGE/1x/background1.png">
             <div id="headerTextwrapper">
-                <h1> WELCOME TO MY STUDENT PORTFOLIO SITE</h1>
+                <h1>Themes Hub</h1>
             </div>
         </section>
-        <section id="section-aboutME">
-            <h2>A LITTLE ABOUT ME</h2>
-            <div id="AM-Container">
-                <div id="AM-IMG"></div>
-                <div id="AM-TXT">
-                    <p>
-                        My name is Hudeifer Esa, I am 23 year old student of MMD at KEA!
-                    </p>
-                </div>
-            </div>
-            <a href="aboutMe.html">
-                <div id="btnAM"> Find out more</div>
-            </a>
-        </section>
-        <section id="section-aboutSITE">
-            <h2>A LITTLE ABOUT THIS SITE </h2>
-            <div id="AS-Container">
-                <div id="AS-IMG"></div>
-                <div id="AS-TXT">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
-                    </p>
-                </div>
-            </div>
-            <a href="aboutSite.html">
-                <div id="btnAS"> Find out more</div>
-            </a>
-        </section>
-        <section id="section-Themes">
+    <section id="section-Themes">
             <h2 id="themesTitle">THEMES </h2>
             <div id="THEME1-Container" class="themeContainers"><a href="theme1.html">
                     <h2 class="themeHeader">Basic Web</h2>
@@ -106,10 +76,9 @@
                 </div>
             </div>
         </section>
-        <div id="footer">
-            <h2>FOOTER</h2>
-        </div>
+    <div class="footer">
+        <h2>FOOTER</h2>
     </div>
-</body>
 
+</body>
 </html>
