--- a/aboutSite.html
+++ b/aboutSite.html
@@ -20,12 +20,23 @@
         </div>
         <div id="linkContainer">
             <ul>
-                <li><a style="text-decoration: none" href="#"> Me </a></li>
-                <li><a style="text-decoration: none" href="#">This site</a></li>
-                <li><a style="text-decoration: none" href="#">Themes</a></li>
+                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
+                <li><a style="text-decoration: none" href="themeHub.html">Themes</a></li>
             </ul>
         </div>
     </div>
-
+    <div class="pageWrapper">
+        <img class="mainImg" src="Assets/images/LARGE/1x/bodyBG.png" alt="">
+        <h1 class="articleTitle">ABOUT THIS SITE</h1>
+        <section class="articleSection">
+            <h2 class="section">Lorem ipsum dolor sit.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cum, sequi, deserunt aspernatur laboriosam iste similique! Reiciendis, consectetur eius dicta corporis non cum ad doloribus, placeat consequatur maiores, cupiditate nesciunt.</p>
+            <img src="Assets/images/1x/Logo1.png" alt="#">
+        </section>
+    </div>
+    <div class="footer">
+        <h2>FOOTER</h2>
+    </div>
 </body>
 </html>
