--- a/themeHub.html
+++ b/themeHub.html
@@ -31,7 +31,7 @@
                 <h1>Themes Hub</h1>
             </div>
         </section>
-    <section id="section-Themes">
+    <section id="section-Themes" class="themepagesection">
             <h2 id="themesTitle">THEMES </h2>
             <div id="THEME1-Container" class="themeContainers"><a href="theme1.html">
                     <h2 class="themeHeader">Basic Web</h2>
