--- a/themeHub.html
+++ b/themeHub.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +10,30 @@
 </head>
 
 <body>
-    <div id="navBar">
-        <div id="logoContainer">
-            <div id="logo"><a href="Index.html">
-                    <img src="Assets/images/1x/Logo1.png" alt="">
+    <div id="themeHubWrapper">
+        <div id="navBar">
+            <div id="logoContainer">
+                <div id="logo"><a href="Index.html">
+                        <img src="Assets/images/1x/Logo1.png" alt="">
 
-                </a>
+                    </a>
+                </div>
+            </div>
+            <div id="linkContainer">
+                <ul>
+                    <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
+                    <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
+                    <li><a style="text-decoration: none" href="#">Themes</a></li>
+                </ul>
             </div>
         </div>
-        <div id="linkContainer">
-            <ul>
-                <li><a style="text-decoration: none" href="aboutMe.html"> Me </a></li>
-                <li><a style="text-decoration: none" href="aboutSite.html">This site</a></li>
-                <li><a style="text-decoration: none" href="#">Themes</a></li>
-            </ul>
-        </div>
-    </div>
-            <section id="header">
+        <section class="TPHeader" id="header">
             <img alt="" src="Assets/images/LARGE/1x/background1.png">
             <div id="headerTextwrapper">
                 <h1>Themes Hub</h1>
             </div>
         </section>
-    <section id="section-Themes" class="themepagesection">
+        <section id="section-Themes" class="themepagesection">
             <h2 id="themesTitle">THEMES </h2>
             <div id="THEME1-Container" class="themeContainers"><a href="theme1.html">
                     <h2 class="themeHeader">Basic Web</h2>
@@ -76,9 +78,10 @@
                 </div>
             </div>
         </section>
-    <div class="footer">
-        <h2>FOOTER</h2>
+        <div class="footer">
+            <h2>FOOTER</h2>
+        </div>
     </div>
-
 </body>
+
 </html>
