began adding texts

--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
                 <div id="AS-IMG"></div>
                 <div id="AS-TXT">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                        This is my student portfolio site. To see the process behind the creation of this site click on "find out more".
                     </p>
                 </div>
             </div>
@@ -68,9 +68,13 @@
                 </a>
                 <div id="theme1-IMG" class="themesImg"></div>
                 <div id="theme1-TXT" class="themesTxt">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
-                    </p>
+                    <p>In this theme I got to explore the basic terminology within user interface design, digital communication, user testing and responsive web design. It was a basic but intensive introduction to some of the key skillsets that spilled over to the other themes.This theme contained 4 modules:</p>
+                    <ul>
+                        <li>Content first: This module focused on creating and curating content from research on a style.</li>
+                        <li>Html and css: in this module we got our first tastes of basic html and Css.</li>
+                        <li>User interface design: in this module we learned how to create interface design without code. This includes wireframes, high and low fidelity prototypes and an introduction to working with Adobe XD.</li>
+                        <li>Responsive Web Design: In this final module of this specific theme, we learned how to make websites responsive so that they can be used on a plethora of different modern and current devices using css and media queries.</li>
+                    </ul>
                 </div>
             </div>
             <div id="THEME2-Container" class="themeContainers"><a href="theme2.html">
@@ -78,9 +82,7 @@
                 </a>
                 <div id="theme2-IMG" class="themesImg"></div>
                 <div id="theme2-TXT" class="themesTxt">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
-                    </p>
+                    <p>In this theme, I was exposed to basic concepts of animation, classic storytelling and character design at an introductory level. I also worked with CSS animations and enhanced the activity of the animations using javascript.</p>
                 </div>
             </div>
             <div id="THEME3-Container" class="themeContainers"><a href="theme3.html">
@@ -90,7 +92,7 @@
 
                 <div id="theme3-TXT" class="themesTxt">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, maiores.
+                        In this theme I was introduced to concept development using video, dramaturgy, film language and media elements. As well as recording and editing techniques.
                     </p>
                 </div>
             </div>
@@ -100,9 +102,7 @@
                 <div id="theme4-IMG" class="themesImg"></div>
                 <div id="theme4-TXT" class="themesTxt">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis magni deserunt fuga mollitia illum necessitatibus blanditiis molestiae rerum omnis earum, nobis magnam? Optio laboriosam repudiandae sint voluptate asperiores quod temporibus laudantium, incidunt aliquam modi nisi, ab dolore, eos id odio tempora aspernatur iste. Fugiat quibusdam deleniti dolore dolorum, expedita? Dicta, quas labore rem laborum temporibus odio excepturi nisi necessitatibus repellat eligendi, ab vitae aliquid explicabo iure voluptatum ut autem non, officiis, blanditiis possimus. Quisquam impedit tenetur quam omnis aut minus, corporis molestiae quaerat cupiditate, explicabo quis! Cumque ratione, voluptatem aliquid sunt molestias iusto rerum dolores tenetur tempora fugit eos quasi.
-
-                    </p>
+                        In this theme I gained an insight into the world of user experience design. This theme gave me a basic understanding of how interaction between users and user interfaces works best, along with theories, tools and methods that can be used to gain an insight to how users actually use the system, rather than relying on personal tastes and assumptions. </p>
                 </div>
             </div>
         </section>
